# reviver

./: .gitignore  README.md  pyproject.toml
dev/: connect_to_openrouter.py  continuous_whisper.py  demo.py  fast_stt.py  gui_test_stream.py  learn_sqlite.py  record_audio.py  set_up_user_dir.py  track_tockens.py  track_tokens.py  try_qtextedit.py  working.py
festivalcobra/: logger.py
reviver/: __init__.py  __main__.py  archive.py  archiver.py  bot.py  chat_data.py  controller.py  conversation.py  conversation_manager.py  helper.py  log.py  message.py  models_data.py  open_router_query_handler.py  schema.sql  session.py  user.py
reviver/gui/: active_conversation_widget.py  bot_gallery_widget.py  bot_manager_widget.py  bot_widget.py  chat_bubble.py  code_bubble.py  conversation.css  conversation_list_widget.py  conversation_widget.py  html_styler.py  key_widget.py  log_widget.py  main.py  markdown_conversion.py  message_block.py  models_widget.py  new_archive.py  new_archive_widget.py
tests/: test_archiver.py  test_bot_reply.py  test_bots.py  test_controller.py  test_conversation.py  test_gui.py  test_html.py  test_models.py  test_session.py  test_user.py
