[tool.poetry]
name = "reviver"
version = "0.0.0"
description = "A desktop client for long-form interaction with LLMs"
authors = ["Mac Prible <prible@gmail.com>"]
license = "BSD 2 clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
PySide6 = "^6.5.2"
openai = "^0.27.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
