[tool.poetry]
name = "reviver"
version = "0.0.0"
description = "A desktop client for long-form interaction with LLMs"
authors = ["Mac Prible <prible@gmail.com>"]
license = "BSD 2 clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
openai = "^0.27.9"
requests = "^2.31.0"
tiktoken = "^0.4.0"
rtoml = "^0.9.0"
pyaudio = "^0.2.13" # note on linux had to run `sudo apt-get install portaudio19-dev`
markdown = "^3.4.4"
pyside6 = "^6.5.2"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ipykernel = "^6.25.1"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reviver= "reviver.__main__:command_line_launcher"